Fix card max-height to correct spacing.

--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -66,7 +66,7 @@ $highlight_color_light: #3bb9ea;
 }
 .gigResult {
   margin: 5px;
-  min-height: 237px;
+  min-height: 200px;
   border: 1px solid #a1a1a1;
   border-radius: 10px;
 }
